--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -6,7 +6,7 @@ jobs:
     strategy:
       matrix:
         node-version: [16.x]
-        mongodb-version: [4.1,4.2, 4.4]
+        mongodb-version: [4.2,4.4]
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
@@ -23,4 +23,4 @@ jobs:
     - run: npm test
       env:
         CI: true
-        MONGOOSE_TEST_URI: mongodb+srv://anwa:258963@cluster0.xfyfj.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+        MONGOOSE_TEST_URI : mongodb+srv://anwar:asdfghjkl@cluster0.xfyfj.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
